--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   
     "content_scripts": [
       {
-        "matches": ["*://*.mangahost2.com/*"],
+        "matches": ["*://*.mangahost.site/manga/*"],
         "js": ["remclass.js"]
       }
     ]
