--- a/manifest.json
+++ b/manifest.json
@@ -8,7 +8,7 @@
   
     "content_scripts": [
       {
-        "matches": ["*://*.mangahost2.com/manga/*"],
+        "matches": ["*://*.mangahosted.com/manga/*"],
         "js": ["remclass.js"]
       }
     ]
