--- a/manifest.json
+++ b/manifest.json
@@ -1,38 +1,20 @@
-(function ($) {
-    $(document).ready(function () {
-
-        // hide .navbar first
-        $(".navbar").addClass('hideme');
-
-        // fade in .navbar
-        $(function () {
-            $(window).scroll(function () {
-                // set distance user needs to scroll before we fadeIn navbar
-                if ($(this).scrollTop() > 100) {
-                    $('.navbar').removeClass('hideme');
-                } else {
-                    $('.navbar').addClass('hideme');
-                }
-            });
-        });
-    });
-}(jQuery));
-
-/* Show navbar */
-
-$(function () {
-    $('#shownav').hover(function () {
-        $('.navbar').removeClass('hideme');
-    });
-});
-
-/* when navbar is hovered over it will override previous */
-
-$(function () {
-    $('.navbar').hover(function () {
-        $('.navbar').removeClass('hideme');
-    }, function () {
-        $('.navbar').addClass('hideme');
-    });
-});.
-hide or transparent
+  {
+    "name": "Getting Started Example",
+    "version": "1.0",
+    "description": "Build an Extension!",
+    "permissions": ["storage"],
+    "background": {
+      "scripts": ["background.js"],
+      "persistent": false
+    },
+    "page_action": {
+      "default_popup": "popup.html",
+      "default_icon": {
+        "16": "images/get_started16.png",
+        "32": "images/get_started32.png",
+        "48": "images/get_started48.png",
+        "128": "images/get_started128.png"
+      }
+    },
+    "manifest_version": 2
+  }
