--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,20 @@
-{
-
-    "manifest_version": 2,
-    "name": "mangahost_navbar_fix",
-    "version": "1.1",
-  
-    "description": "deixa a navbar do site mangahost sem acompanhar a rolagem da usuário.",
-  
-    "content_scripts": [
-      {
-        "matches": ["*://*.mangahost2.com/manga/*"],
-        "js": ["remclass.js"]
+  {
+    "name": "Getting Started Example",
+    "version": "1.0",
+    "description": "Build an Extension!",
+    "permissions": ["storage"],
+    "background": {
+      "scripts": ["background.js"],
+      "persistent": false
+    },
+    "page_action": {
+      "default_popup": "popup.html",
+      "default_icon": {
+        "16": "images/get_started16.png",
+        "32": "images/get_started32.png",
+        "48": "images/get_started48.png",
+        "128": "images/get_started128.png"
       }
-    ],
-    "icons": {
-      "16": "./img/kaiji_4Lg_icon.png",
-      "32": "./img/kaiji_221_icon.png",
-      "48": "./img/kaiji_wGt_icon.png",
-      "128": "./img/kaiji_Nq2_icon.png"
-    }
-}
+    },
+    "manifest_version": 2
+  }
