--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,28 @@
-  {
+{	  {
+
     "name": "Getting Started Example",
-    "version": "1.0",
-    "description": "Build an Extension!",
-    "permissions": ["storage"],
+    "manifest_version": 2,	    "version": "1.0",
+    "name": "mangahost_navbar_fix",	    "description": "Build an Extension!",
+    "version": "1.1",	    "permissions": ["storage"],
+
     "background": {
-      "scripts": ["background.js"],
+    "description": "deixa a navbar do site mangahost sem acompanhar a rolagem da usuário.",	      "scripts": ["background.js"],
+
       "persistent": false
-    },
-    "page_action": {
-      "default_popup": "popup.html",
-      "default_icon": {
+    "content_scripts": [	    },
+      {	    "page_action": {
+        "matches": ["*://*.mangahost2.com/manga/*"],	      "default_popup": "popup.html",
+        "js": ["remclass.js"]	      "default_icon": {
         "16": "images/get_started16.png",
         "32": "images/get_started32.png",
         "48": "images/get_started48.png",
         "128": "images/get_started128.png"
-      }
-    },
-    "manifest_version": 2
-  }
+      }	      }
+    ],	    },
+    "icons": {	    "manifest_version": 2
+      "16": "./img/kaiji_4Lg_icon.png",	  }
+      "32": "./img/kaiji_221_icon.png",	
+      "48": "./img/kaiji_wGt_icon.png",	
+      "128": "./img/kaiji_Nq2_icon.png"	
+    }	
+}
