--- a/manifest.json
+++ b/manifest.json
@@ -1,21 +1,27 @@
 {
-
-    "manifest_version": 2,
-    "name": "mangahost_navbar_fix",
-    "version": "1.1",
-  
-    "description": "deixa a navbar do site mangahost sem acompanhar a rolagem da usuário.",
-  
-    "content_scripts": [
-      {
-        "matches": ["*://*.mangahost2.com/manga/*"],
-        "js": ["remclass.js"]
-      }
-    ],
-    "icons": {
-      "16": "./img/kaiji_4Lg_icon.png",
-      "32": "./img/kaiji_221_icon.png",
-      "48": "./img/kaiji_wGt_icon.png",
-      "128": "./img/kaiji_Nq2_icon.png"
-    }
+	"manifest_version": 2,
+	"name": "mangahost_navbar_fix",
+	"version": "1.1",
+	"description": "deixa a navbar do site mangahost sem acompanhar a rolagem da usuário.",
+	"content_scripts": [
+		{
+			"matches": ["*://*.mangahost2.com/manga/*"],
+			"js": ["remclass.js"]
+		}
+	],
+	"permissions": ["tabs"],
+	"background": {
+		"scripts": ["background.js"]
+	},
+	"browser_action": {
+		"default_icon": "./img/kaiji_221_icon.png",
+		"default_popup": "popup.html",
+		"default_title": "Mangahost navbar settings"
+	},
+	"icons": {
+		"16": "./img/kaiji_4Lg_icon.png",
+		"32": "./img/kaiji_221_icon.png",
+		"48": "./img/kaiji_wGt_icon.png",
+		"128": "./img/kaiji_Nq2_icon.png"
+	}
 }
